test/typechecker.d/invalid/fns7.souc.bad
n: Integer = 5

f(n: Integer): Integer = do
	return n
